XO_Project_UAT/Project--XOGrp--UAT/src/objects/Residual_Sales_Rep__c.object
<CustomObject>
    <fields>
        <fullName>Live_Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Live Subscription</label>
        <referenceTo>Live_Subscription__c</referenceTo>
        <relationshipName>Residuals_Sales_Reps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PayeeID__c</fullName>
        <formula>PayeeName__r.SalesRepID__c</formula>
        <label>Payee ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PayeeName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payee Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Originating_Sales_Reps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PayeeStartDate__c</fullName>
        <label>Payee Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PayeeType__c</fullName>
        <label>Payee Type</label>
        <picklist>
            <picklistValues>
                <fullName>Test</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Residual Sales Rep</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Live_Subscription__c</columns>
        <columns>PayeeID__c</columns>
        <columns>PayeeName__c</columns>
        <columns>PayeeStartDate__c</columns>
        <columns>PayeeType__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Payee-{YYYY}{MM}{DD}-{00000}</displayFormat>
        <label>Payee Num</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Residual Sales Reps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Only_allow_Specific_Person_to_update</fullName>
        <active>false</active>
        <errorConditionFormula>And(
$User.Id != &apos;005j000000DU2Hl&apos; ,
$User.Casesafe_ID__c != &apos;005f100000Ipi3k&apos; ,
$Profile.Name != &apos;System Administrator&apos;, 
$Profile.Name != &apos;Service Accounts&apos;,
$Profile.Name != &apos;Service Accounts Hubspot&apos;
)</errorConditionFormula>
        <errorMessage>You can&apos;t update residual Reps</errorMessage>
    </validationRules>
</CustomObject>